--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,10 @@
 .row-section input{
     height: 25px;
     padding-left: 5px;
+    display: block;
+}
+.row-section label{
+    display: block;
 }
 .submit-button-section{
     display: block;
