--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row-section">
       <label>Fileding Position</label>
-      <input placeholder="Fileding position" [(ngModel)]="inputModels.position">
+      <app-multi-select [positionList]="fieldPositions"></app-multi-select>
     </div>
   </div>
   <div class="submit-button-section">
